--- a/main.html
+++ b/main.html
@@ -5,12 +5,40 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
+<style>
+	.d1{
+	background-color:yellow;
+	border:   solid black;
+} 
+</style>
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<table  border="" class="d1">
+	<thead> 
+		    <caption>Student Details</caption>  
+		<tr>
+			<th>NAME</th>
+			<th>AGE</th>
+			<th>BRANCH</th>
+		</tr>
+	</thead>
+	<tbody>
+		 
+			<tr>
+				<th>Shaw</th>
+				<th>20</th>
+				<th>CSE</th>
+			</tr>
+		<tr>
+				<th>Adil</th>
+				<th>21</th>
+				<th>ECE</th>
+			</tr>
+		 
+	</tbody>
+</table>
 </body>
 
 </html>
